disable overscroll to stop layout shifting on mobile

--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,7 @@
 }
 
 body {
+  overscroll-behavior: none;
   @include mixins.flex;
   min-height: 100vh;
   padding: 16px;
